subprojects/thingverse-deployment/nginx-ingress/thingverse-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: thingverse-ingress
  namespace: thingverse
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: thingverse.local.com
    http:
      paths:
      - path: /sba(/|$)(.*)
        backend:
          serviceName: thingverse-admin
          servicePort: 9595
